# CMakeList.txt : CMake project for Data Structures Project 1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Data Structures Project 1.cpp" "Data Structures Project 1.h")

# TODO: Add tests and install targets if needed.
